# assemblydb

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  linker.ld
docs/: usage-guide.md
docs/reports/: 2026-02-15-backup-restore-hardening.md
flutter/: ffigen.yaml  pubspec.yaml
flutter/android/: build.gradle
flutter/android/src/main/: AndroidManifest.xml  CMakeLists.txt
flutter/example/: example.dart
flutter/lib/: assemblydb.dart
flutter/lib/src/: assemblydb_base.dart  config.dart  errors.dart  metrics.dart  scan_entry.dart  transaction.dart
flutter/lib/src/bindings/: assemblydb_bindings.g.dart  native_lib.dart
flutter/linux/: CMakeLists.txt
flutter/test/: assemblydb_test.dart
include/: assemblydb.h
src/: const.s  init.s
src/adapters/cache/: cache_adapter.s  lru_cache.s
src/adapters/compress/: compress_adapter.s  lz4.s  noop_compress.s
src/adapters/crypto/: aes256gcm.s  crypto_adapter.s  noop_crypto.s
src/adapters/engine/btree/: btree_adapter.s  btree_delete.s  btree_insert.s  btree_page.s  btree_scan.s  btree_search.s
src/adapters/engine/lsm/: compaction.s  lsm_adapter.s  memtable.s  sstable_read.s  sstable_write.s
src/adapters/index/: btree_index.s  index_adapter.s
src/adapters/wal/: wal_adapter.s  wal_recover.s  wal_writer.s
src/core/: aes_hw.s  arena.s  bloom.s  crc32.s  error.s  key_compare.s  neon_ops.s  random.s  string_ops.s
src/domain/: api.s  backup_manager.s  merge_iter.s  metrics.s  mvcc.s  router.s  tx_manager.s
src/infra/: mmap_alloc.s  mutex.s  rwlock.s  syscall.s  thread.s
src/ports/: cache_port.s  compress_port.s  crypto_port.s  index_port.s  storage_port.s  tx_port.s  wal_port.s
tests/: bench.c  diag_persist.c  test_adversarial.c  test_btree.c  test_bulletproof.c  test_compress.c  test_core.c  test_crypto.c  test_edge.c  test_endurance.c  test_hardening.c  test_integration.c  test_integrity.c  test_lsm.c  test_mvcc.c  test_production.c  test_realworld.c  test_stress.c  test_torture.c
